[1200] react to position changes

--- a/TravelRecordApp/TravelRecordApp.iOS/TravelRecordApp.iOS.csproj
+++ b/TravelRecordApp/TravelRecordApp.iOS/TravelRecordApp.iOS.csproj
@@ -159,6 +159,9 @@
     <Reference Include="Plugin.Permissions">
       <HintPath>..\..\packages\Plugin.Permissions.3.0.0.12\lib\xamarinios10\Plugin.Permissions.dll</HintPath>
     </Reference>
+    <Reference Include="Plugin.Geolocator">
+      <HintPath>..\..\packages\Xam.Plugin.Geolocator.4.5.0.6\lib\xamarinios10\Plugin.Geolocator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TravelRecordApp\TravelRecordApp.csproj">
