--- a/TravelRecordApp/TravelRecordApp.Android/packages.config
+++ b/TravelRecordApp/TravelRecordApp.Android/packages.config
@@ -7,6 +7,7 @@
   <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="monoandroid81" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.11" targetFramework="monoandroid81" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.11" targetFramework="monoandroid81" />
+  <package id="Xam.Plugin.Geolocator" version="4.5.0.6" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3.1" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3.1" targetFramework="monoandroid81" />
