--- a/TravelRecordApp/TravelRecordApp.iOS/packages.config
+++ b/TravelRecordApp/TravelRecordApp.iOS/packages.config
@@ -5,6 +5,7 @@
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.11" targetFramework="xamarinios10" />
+  <package id="Xam.Plugin.Geolocator" version="4.5.0.6" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="3.3.0.967583" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms.Maps" version="3.3.0.967583" targetFramework="xamarinios10" />
 </packages>
