--- a/TravelRecordApp/TravelRecordApp/packages.config
+++ b/TravelRecordApp/TravelRecordApp/packages.config
@@ -28,6 +28,7 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xam.Plugin.Geolocator" version="4.5.0.6" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="3.3.0.967583" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms.Maps" version="3.3.0.967583" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
